Mejora en la gestión de los UUID mediante Hibernate